changed logo and fixed visibility of menu icons.

--- a/point_and_clickle/static/css/style.css
+++ b/point_and_clickle/static/css/style.css
@@ -279,7 +279,7 @@ section {
   }
 
   .navbar ul {
-    display: none;
+    /*display: none;*/
   }
 }
 .navbar-mobile {
